--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,9 @@
   file: forest.wav
   key: f
   name: Forest
-  repeat: true
+  repeat: false
 - bg: true
-  file: storm.wav
+  file: /home/ayron/Code/soundboard/storm.wav
   key: s
   name: Storm
   repeat: true
